# handler/showOpening.go
@@ -7,6 +7,18 @@ import (
 	"github.com/wsldev/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show opening
+// @Description Show a new job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Open identification"
+// @Success 200 {object} ShowOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [get]
 func ShowOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
